--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@
 	name: 'corporate';
 	default: false;
 	prefersdark: false;
+	prefix: 'day';
 	color-scheme: 'light';
 	--color-base-100: oklch(100% 0 0);
 	--color-base-200: oklch(93% 0 0);
